# colorless-green

./: .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  Makefile  README.local.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  index.md  tags.md
docs/01-retrieval-course/: 00-01-index.md  00-02-intro.md  01-01-ir-fundamentals.md  01-02-lexical-vs-semantic-search.md  01-03-embeddings-language-of-meaning.md  02-01-bi-encoders.md  02-02-cross-encoders.md  02-03-deep-dive-bm25.md  02-04-deep-dive-splade.md  02-05-deep-dive-colbert.md  03-01-hybrid-retriever.md  03-02-reciprocal-rank-fusion.md  03-03-visual-guide-architectures.md  04-01-key-ir-evaluation-metrics.md  04-02-the-beir-framework-for-reproducible-research.md  04-03-need-for-domain-adaptation.md  04-04-engine-of-dapt-mlm.md  04-05-training-the-teacher-cross-encoder.md  04-06-mechanics-of-knowledge-distillation.md  05-01-annex-context-refinement.md
docs/02-agentic-reasoning-course/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2025-10-20-why-graphmert-matters.md  2025-10-30-chaotic-history-of-modern-ai.md
docs/glossary/: benchmarking-philosophies.md  modern-ai-evaluation.md  neuro-symbolic-roadmap.md  three-pillars-of-domain-ai.md
docs/javascripts/: katex.js
docs/stylesheets/: extra.css
overrides/partials/: comments.html
